# reference-transporter

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
agents/: openai.yaml
examples/: sample_refs.txt
references/: confidence-rules.md  data-contracts.md  workflow.md
scripts/: refsync.py
src/zwb/: __init__.py  cli.py  config.py  grobid.py  metadata_resolver.py  models.py  openalex.py  thesis_docx.py  utils.py  word.py  zotero_local.py  zotero_web.py
